--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
 bracket {
   width: 970px;
   padding-top: 10px;
-  margin: 0 auto;
+  margin: 0 30px;
+  display: inline-block;
 }
 
-.blank-space {
-  height: 10px;
-  width: 100%;
+algorithm-box {
+  display: inline-block;
 }
