Change button to just say "Simulate"

--- a/src/app/bracket/bracket.component.html
+++ b/src/app/bracket/bracket.component.html
@@ -1,5 +1,5 @@
 <div class="bracket-container">
-  <button class="simulation-button" (click)="simulateAllRounds()" id="simButton">Simulate All Rounds</button>
+  <button class="simulation-button" (click)="simulateAllRounds()" id="simButton">Simulate</button>
   <bracket-round1 id="round1" class="round"></bracket-round1>
   <bracket-round2 id="round2" class="round"></bracket-round2>
   <bracket-round3 id="round3" class="round"></bracket-round3>
