--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <bracket></bracket>
 <algorithm-box [algorithm]="algorithmToTest"></algorithm-box>
+<winners [winnerCountMap]="tournamentRunner.overallWinnerCount"></winners>
