--- a/src/app/bracket/bracket.component.html
+++ b/src/app/bracket/bracket.component.html
@@ -1,6 +1,9 @@
 <div class="bracket-container">
-  <button class="simulation-button" (click)="simulateAllRounds()" id="simOnceButton">Simulate Once</button>
-  <button class="simulation-button" (click)="simulateXTimes(1000)" id="simXButton">Simulate X Times</button>
+  <div class="simulation-button">
+    <button (click)="simulateXTimes(simulationNumber)" id="simXButton">Simulate {{simulationNumber}} Time{{simulationNumber === 1 ? "" : "s"}}</button>
+    <input class="simulation-number" type="number" [(ngModel)]="simulationNumber" min="1" max="10000">
+  </div>
+
   <bracket-round1 id="round1" class="round"></bracket-round1>
   <bracket-round2 id="round2" class="round"></bracket-round2>
   <bracket-round3 id="round3" class="round"></bracket-round3>
