--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <bracket (onSelectedYearChange)="updateSelectedYear($event)"></bracket>
 <algorithm-box [algorithm]="algorithmToTest"></algorithm-box>
-<winners [winnerCountMap]="tournamentRunner.overallWinnerCount"></winners>
+<winners [winnerCountMap]="tournamentRunner.overallWinnerCount" [sweet16EntryCountMap]="tournamentRunner.sweet16EntryCountMap"></winners>
