--- a/src/app/bracket/round6/round6.component.css
+++ b/src/app/bracket/round6/round6.component.css
@@ -63,6 +63,14 @@ strong, strong span.seed, strong span.score {
 .match .slot2 {
   bottom: 0px;
 }
+.match.m1 {
+  margin-left: 17px;
+  height: 56px;
+  top: 440px;
+}
+.match.m1 .slot2 {
+  top: 26px;
+}
 .match .score {
   position: absolute;
   right: 4px;
@@ -96,6 +104,7 @@ strong, strong span.seed, strong span.score {
 .champion {
   position: relative;
   top: 380px;
+  margin-left: 17px;
 }
 
 .simulation-button{
