--- a/src/app/bracket/bracket.component.html
+++ b/src/app/bracket/bracket.component.html
@@ -4,6 +4,7 @@
       <option [value]="2017">2017</option>
       <option [value]="2018">2018</option>
       <option [value]="2019">2019</option>
+      <option [value]="2021">2021</option>
     </select>
     <button (click)="simulateXTimes(simulationNumber)" id="simXButton">Simulate {{simulationNumber}} Time{{simulationNumber === 1 ? "" : "s"}}</button>
     <input class="simulation-number" type="number" [(ngModel)]="simulationNumber" min="1" max="10000">
